Fix warning due to migration